Fixed confirm dialog not showing anything after flippable change

--- a/assets/stylesheets/modules/layer.less
+++ b/assets/stylesheets/modules/layer.less
@@ -4,17 +4,25 @@
   visibility: visible;
 
   .wrap {
+    background: #fff;
+    border: 1px solid @line-color;
     position: absolute;
     top: 10%;
     z-index: 100;
     .border-radius(3px);
-    .perspective(1000px);
+    .material-shadow(4);
 
+    // used in big layers
     h1 {
       margin-top: 2px;
       border-bottom: 1px solid @line-color;
       padding-bottom: 6px;
       overflow: hidden;
+    }
+
+    // used in confirm dialogs
+    h3 {
+      margin-top: 6px;
     }
 
     p {
@@ -78,36 +86,62 @@
     visibility: hidden;
   }
 
-  .wrap > div {
-    background: #fff;
-    border: 1px solid @line-color;
-    padding: 20px 30px;
-    .backface-visibility(hidden);
-    .transform-style(preserve-3d);
-    .transition(all 0.4s ease-in-out);
-    .material-shadow(4);
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-  }
-
   .normal-text {
-    z-index: 101;
-    .transform(rotateY(0deg));
+    display: block;
   }
   .help-text {
-    z-index: 100;
-    .transform(rotateY(-179deg));
+    display: none;
   }
 
   &.is-helping {
     .normal-text {
-      .transform(rotateY(179deg));
+      display: none;
     }
     .help-text {
+      display: block;
+    }
+  }
+
+  &.flippable {
+    > .wrap {
+      background: transparent;
+      border: none;
+      .box-shadow(none);
+      .perspective(1000px);
+    }
+    > .wrap > div {
+      background: #fff;
+      border: 1px solid @line-color;
+      padding: 20px 30px;
+      .backface-visibility(hidden);
+      .transform-style(preserve-3d);
+      .transition(all 0.4s ease-in-out);
+      .material-shadow(4);
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .normal-text {
+      display: block;
+      z-index: 101;
       .transform(rotateY(0deg));
+    }
+    .help-text {
+      display: block;
+      z-index: 100;
+      .transform(rotateY(-179deg));
+    }
+
+    &.is-helping {
+      .normal-text {
+        .transform(rotateY(179deg));
+      }
+      .help-text {
+        .transform(rotateY(0deg));
+      }
     }
   }
 }
